--- a/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
+++ b/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
@@ -1,3 +1,4 @@
+{% load gobotany_tags %}
                 <ul id="footer-nav" class="sections">
                     <li>{% nav_item 'Home' site-home %}</li>
                     <li>{% nav_item 'Simple Key' level1 'simple' %}</li>
