Fix orientation marker on top navigation for simple and full keys.
Ensure orientation marker works properly and consistently across all
the sections, including at the top level of a section and within the
section. Write browser tests that verify these. (#249)

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -3,7 +3,7 @@
 
 {% block title %}{{ subgroups_list_page.title }}{% endblock %}
 
-{% block body_attributes %}id="plant-id-2" class="app"{% endblock %}
+{% block body_attributes %}id="plant-id-2" class="app {{ key|title|lower }}"{% endblock %}
 
 {% block js_top %}
     {# TODO: eventually move elsewhere #}
