--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -8,6 +8,7 @@
 {% endblock %}
 {% block body_attributes %}
     id="dkey"
+    class="dkey"
     data-couplet-rank="{{ page.rank }}"
     data-couplet-title="{{ page.title }}"
 {% endblock %}
