--- a/gobotany/site/templates/gobotany/_primary_navigation_top.html
+++ b/gobotany/site/templates/gobotany/_primary_navigation_top.html
@@ -1,17 +1,17 @@
 {% load gobotany_tags %}
             <ul>
                 <li class="home">{% nav_item 'Home' site-home %}</li>
-                <li class="plant-id">{% nav_item 'Simple Key' level1 'simple' %}</li>
+                <li class="simple">{% nav_item 'Simple Key' level1 'simple' %}</li>
                 {% if debug %}
                     {# Development navigation, linking to all as if released #}
                     <li class="plantshare">{% nav_item 'PlantShare' ps-main %}</li>
-                    <li class="full-key">{% nav_item 'Full Key' level1 'full' %}</li>
-                    <li class="dich-key">{% nav_item 'Dichotomous Key' dkey %}</li>
+                    <li class="full">{% nav_item 'Full Key' level1 'full' %}</li>
+                    <li class="dkey">{% nav_item 'Dichotomous Key' dkey %}</li>
                 {% else %}
                     {# Production navigation, with some features unreleased yet #}
                     <li class="plantshare">{% nav_item 'PlantShare' plantshare-placeholder %}</li>
-                    <li class="full-key">{% nav_item 'Full Key' full-key-placeholder %}</li>
-                    <li class="dich-key">{% nav_item 'Dichotomous Key' dich-key-placeholder %}</li>
+                    <li class="full">{% nav_item 'Full Key' full-key-placeholder %}</li>
+                    <li class="dkey">{% nav_item 'Dichotomous Key' dich-key-placeholder %}</li>
                 {% endif %}
                 <li class="teaching">{% nav_item 'Teaching' site-teaching %}</li>
                 <li class="about">{% nav_item 'About' site-about %}</li>
