Improve simple and full key page headings for better orientation.
Make the headings match the link that was clicked to reach the page in
order to reassure and orient the user as they navigate. Do this on
both the main Simple and Full Key pages as well as for the level
below ('Level 2'). This should help the user to better know which
of the two similar-looking keys they are in. (#249)

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -26,9 +26,9 @@
                     &gt; <span>{{ pilegroup.friendly_title|lower|capfirst }}</span></p>
                 </div>
                 
-                <h2>{{ subgroups_list_page.main_heading }}</h2>
+                <h2>{{ pilegroup.friendly_title|lower|capfirst }}</h2>
 
-                <p class="tip">Please go through the subgroups in order.</p>
+                <p class="tip">{{ subgroups_list_page.main_heading }} Please go through the subgroups in order.</p>
 
                 <div class="clearit"></div>
 
