--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -24,9 +24,9 @@
                     <p>You are here: <span>{{ key|title }} Key</span></p>
                 </div>
 
-                <h2>{{ groups_list_page.main_heading }}</h2>
+                <h2>{{ key|title }} Key</h2>
 
-                <p class="tip">Please go through the groups in order.</p>
+                <p class="tip">{{ groups_list_page.main_heading }} Please go through the groups in order.</p>
 
                 <div class="clearit"></div>
 
