Improve the ability to scan instructions on Levels 1/2 pages.
Make the question text larger, darker, and on its own line. (#249)

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -28,7 +28,8 @@
                 
                 <h2>{{ pilegroup.friendly_title|lower|capfirst }}</h2>
 
-                <p class="tip">{{ subgroups_list_page.main_heading }} Please go through the subgroups in order.</p>
+                <p class="question">{{ subgroups_list_page.main_heading }}</p>
+                <p class="tip">Please go through the subgroups in order.</p>
 
                 <div class="clearit"></div>
 
