--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -22,7 +22,8 @@
             <div id="main">
                 <h2>{{ key|title }} Key</h2>
 
-                <p class="tip">{{ groups_list_page.main_heading }} Please go through the groups in order.</p>
+                <p class="question">{{ groups_list_page.main_heading }}</p>
+                <p class="tip">Please go through the groups in order.</p>
 
                 <div class="clearit"></div>
 
