--- a/gobotany/static/sass/_media-queries.scss
+++ b/gobotany/static/sass/_media-queries.scss
@@ -240,15 +240,15 @@
         position: relative;
         text-decoration: none;
     }
-    footer .navigation > ul.sections li a:after {
+    footer .navigation > ul.sections li a[href] {
+        background: #508e31;
+        color: #fff;
+    }
+    footer .navigation > ul.sections li a[href]:after {
         content: " >";
         font-weight: bold;
         position: absolute;
         right: 14px;
-    }
-    footer .navigation > ul.sections li a[href] {
-        background: #508e31;
-        color: #fff;
     }
     footer .navigation > h6:nth-of-type(2) {
         margin: 14px 14px 4px 71px;
