--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -59,6 +59,7 @@ $smallscreen-margin: 8px;
 $smallscreen-potd-image-width: 297px;
 $smallscreen-portrait-box-width: 302px;
 $smallscreen-landscape-box-width: 462px;
+$smallscreen-current-section-color: #85c446;
 
 @mixin offscreen {
     display: block;
