--- a/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
+++ b/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
@@ -1,18 +1,18 @@
 {% load gobotany_tags %}
                 <ul id="footer-nav" class="sections">
-                    <li>{% nav_item 'Home' site-home %}</li>
-                    <li>{% nav_item 'Simple Key' level1 'simple' %}</li>
+                    <li class="home">{% nav_item 'Home' site-home %}</li>
+                    <li class="simple">{% nav_item 'Simple Key' level1 'simple' %}</li>
                     {% if debug %}
                         {# Development navigation, linking to all as if released #}
-                        <li>{% nav_item 'PlantShare' ps-main %}</li>
-                        <li>{% nav_item 'Full Key' level1 'full' %}</li>
-                        <li>{% nav_item 'Dichotomous Key' dkey %}</li>
+                        <li class="plantshare">{% nav_item 'PlantShare' ps-main %}</li>
+                        <li class="full">{% nav_item 'Full Key' level1 'full' %}</li>
+                        <li class="dkey">{% nav_item 'Dichotomous Key' dkey %}</li>
                     {% else %}
                         {# Production navigation, with some features unreleased yet #}
-                        <li>{% nav_item 'PlantShare' plantshare-placeholder %}</li>
-                        <li>{% nav_item 'Full Key' full-key-placeholder %}</li>
-                        <li>{% nav_item 'Dichotomous Key' dich-key-placeholder %}</li>
+                        <li class="plantshare">{% nav_item 'PlantShare' plantshare-placeholder %}</li>
+                        <li class="full">{% nav_item 'Full Key' full-key-placeholder %}</li>
+                        <li class="dkey">{% nav_item 'Dichotomous Key' dich-key-placeholder %}</li>
                     {% endif %}
-                    <li>{% nav_item 'Teaching' site-teaching %}</li>
-                    <li>{% nav_item 'About' site-about %}</li>
+                    <li class="teaching">{% nav_item 'Teaching' site-teaching %}</li>
+                    <li class="about">{% nav_item 'About' site-about %}</li>
                 </ul>
