--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -746,6 +746,13 @@ body.plantshare #sidebar #login.box div { border-top: 1px solid #508e31; padding
   .content #sidebar { width: 462px; } }
 /* These styles are common to both smartphone widths */
 @media only screen and (max-width: 600px) { body { margin: 0 auto; padding: 0; }
+  body#home footer .navigation ul.sections li.home a { background-color: #85c446; }
+  body.simple footer .navigation ul.sections li.simple a { background-color: #85c446; }
+  body.plantshare footer .navigation ul.sections li.plantshare a { background-color: #85c446; }
+  body.full footer .navigation ul.sections li.full a { background-color: #85c446; }
+  body.dkey footer .navigation ul.sections li.dkey a { background-color: #85c446; }
+  body.teaching footer .navigation ul.sections li.teaching a { background-color: #85c446; }
+  body.about footer .navigation ul.sections li.about a { background-color: #85c446; }
   h1 { font-size: 24px; }
   h2 { font-size: 18px; }
   h3 { font-size: 16px; }
@@ -772,8 +779,8 @@ body.plantshare #sidebar #login.box div { border-top: 1px solid #508e31; padding
   footer .navigation h6:first-child { display: none; }
   footer .navigation > ul.sections li { display: block; margin: 0 0 1px 0; }
   footer .navigation > ul.sections li:after { content: none; }
-  footer .navigation > ul.sections li a { background: #85c446; color: #fff; display: block; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 14px; padding: 14px 14px; position: relative; text-decoration: none; }
-  footer .navigation > ul.sections li a[href] { background: #508e31; color: #fff; }
+  footer .navigation > ul.sections li a { background: #508e31; color: #fff; display: block; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 14px; padding: 14px 14px; position: relative; text-decoration: none; }
+  footer .navigation > ul.sections li a[href] { color: #fff; }
   footer .navigation > ul.sections li a[href]:after { content: " >"; font-weight: bold; position: absolute; right: 14px; }
   footer .navigation > ul.sections + h6 { /* "Legal:" label */ display: none; }
   footer .navigation > h6:nth-of-type(2) { margin: 14px 14px 4px 71px; }
