--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -218,7 +218,7 @@ nav #search button { background: #508e31 url(/static/images/layout/search-btn.pn
 nav #search button:active { background-position: 0 -20px; }
 
 /* Active navigation state */
-#plant-id.simple li.simple a, #plant-id-2.simple li.simple a, #plant-id-3.simple li.simple a, #plantshare li.plantshare a, #plant-id.full li.full a, #plant-id-2.full li.full a, #plant-id-3.full li.full a, #dkey li.dkey a { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; }
+#plant-id.simple header li.simple a, #plant-id-2.simple header li.simple a, #plant-id-3.simple header li.simple a, #plantshare header li.plantshare a, #plant-id.full header li.full a, #plant-id-2.full header li.full a, #plant-id-3.full header li.full a, #dkey li.dkey header a { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; }
 
 #plantshare #sidebar a:hover, #teaching-tools #sidebar a:hover, #full-key #sidebar a:hover, #dich-key #sidebar a:hover, #privacy-policy #sidebar a:hover, #terms-of-use #sidebar a:hover { text-decoration: none; }
 
@@ -1324,6 +1324,8 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #glossary #alphabet { height: 66px; } }
 /* These styles are common to both smartphone widths */
 @media only screen and (max-width: 600px) { body { margin: 0 auto; padding: 0; }
+  body.simple footer .navigation ul.sections li.simple a { background-color: #85c446; }
+  body.full footer .navigation ul.sections li.full a { background-color: #85c446; }
   h2 { font-size: 24px; }
   h3 { font-size: 18px; }
   h4 { font-size: 16px; }
