--- a/gobotany/static/sass/_media-queries.scss
+++ b/gobotany/static/sass/_media-queries.scss
@@ -123,6 +123,16 @@
     body {
         margin: 0 auto;
         padding: 0;
+        &.simple {
+            footer .navigation ul.sections li.simple a {
+                background-color: $smallscreen-current-section-color;
+            }
+        }
+        &.full {
+            footer .navigation ul.sections li.full a {
+                background-color: $smallscreen-current-section-color;
+            }
+        }
     }
     h2 {
         font-size: 24px;
