--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -5,6 +5,7 @@
 $headings-font: "Trebuchet MS", Helvetica, Arial, sans-serif;
 $body-font: Verdana, Geneva, sans-serif;
 $narrower-body-font: Tahoma, "Trebuchet MS", sans-serif;
+$smallscreen-current-section-color: #85c446;
 
 /* First are SASS "partials" for formerly external and third-party styles.
  * This is to keep all styles in just one deployed CSS file, styles.css.
@@ -105,14 +106,14 @@ nav #search button:active {
     background-position: 0 -20px;
 }
 /* Active navigation state */
-#plant-id.simple li.simple a,
-#plant-id-2.simple li.simple a,
-#plant-id-3.simple li.simple a,
-#plantshare li.plantshare a,
-#plant-id.full li.full a,
-#plant-id-2.full li.full a,
-#plant-id-3.full li.full a,
-#dkey li.dkey a {
+#plant-id.simple header li.simple a,
+#plant-id-2.simple header li.simple a,
+#plant-id-3.simple header li.simple a,
+#plantshare header li.plantshare a,
+#plant-id.full header li.full a,
+#plant-id-2.full header li.full a,
+#plant-id-3.full header li.full a,
+#dkey li.dkey header a {
 	background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat;	
 }
 
