Simplify switch for showing future navigation links on dev Heroku.
Replace the debug context processor, which involved both the DEBUG setting and
the INTERNAL_IPS setting, with a new variable in our own context processor,
DEV_FEATURES. This will normally be True in local dev, and False in production.
To override for dev Heroku, set an environment variable DEV_FEATURES=True. (#248)

--- a/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
+++ b/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
@@ -2,7 +2,7 @@
                 <ul id="footer-nav" class="sections">
                     <li class="home">{% nav_item 'Home' site-home %}</li>
                     <li class="simple">{% nav_item 'Simple Key' level1 'simple' %}</li>
-                    {% if debug %}
+                    {% if dev_features %}
                         {# Development navigation, linking to all as if released #}
                         <li class="plantshare">{% nav_item 'PlantShare' ps-main %}</li>
                         <li class="full">{% nav_item 'Full Key' level1 'full' %}</li>
