Add a note to the contributors page about photo credits.

--- a/gobotany/site/templates/gobotany/contributors.html
+++ b/gobotany/site/templates/gobotany/contributors.html
@@ -57,6 +57,11 @@
         <li>Elizabeth Farnsworth</li>
         <li>Gordon Morrison</li>
     </ul>
+
+    <h2>Photography</h2>
+
+    <p>Credits appear with the photos throughout the site.</p>
+
 {% endblock %}
 
 {% block sidebar_content %}
