--- a/gobotany/plantshare/templates/registration/activation_complete.html
+++ b/gobotany/plantshare/templates/registration/activation_complete.html
@@ -13,6 +13,6 @@ begin sharing!</p>
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "_plantshare_navigation.html" %}
+    {% include "_plantshare_minimal_navigation.html" %}
 {% endblock %}
 
