--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -2,7 +2,7 @@
 
 {% block title %}Logged Out{% endblock %}
 
-{% block body_attributes %}id="logged_out" class="plantshare"{% endblock %}
+{% block body_attributes %}id="logged-out" class="plantshare"{% endblock %}
 
 {% block main_content %}
 <h1>Logged Out</h1>
