--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -39,18 +39,35 @@
                             <div class="frame"></div>
                             <div class="img-container">
                                 <div class="images">
-                                    {% for content_image in pile_images %}
-                                        {% with content_image as i %}
-                                            {% with i.creator as photographer %}
-                                            <a href="{{ i.image_medium }}"
-                                                rel="shadowbox[{{ pile.slug }}]"
-                                                title="{% photo_credit i i.scientific_name %}">
-                                                <img src="{{ i.thumb_large }}"
-                                                    alt="{% photo_credit i i.scientific_name %}">
-                                            </a>
+                                    {# Mockup for Issue #254 #}
+                                    {% if key == 'full' and forloop.counter == 3 %}
+                                        {# Start with the second image (basal leaves) #}
+                                        {% for content_image in pile_images|slice:"1:" %}
+                                            {% with content_image as i %}
+                                                {% with i.creator as photographer %}
+                                                <a href="{{ i.image_medium }}"
+                                                    rel="shadowbox[{{ pile.slug }}]"
+                                                    title="{% photo_credit i i.scientific_name %}">
+                                                    <img src="{{ i.thumb_large }}"
+                                                        alt="{% photo_credit i i.scientific_name %}">
+                                                </a>
+                                                {% endwith %}
                                             {% endwith %}
-                                        {% endwith %}
-                                    {% endfor %}
+                                        {% endfor %}
+                                    {% else %}
+                                        {% for content_image in pile_images %}
+                                            {% with content_image as i %}
+                                                {% with i.creator as photographer %}
+                                                <a href="{{ i.image_medium }}"
+                                                    rel="shadowbox[{{ pile.slug }}]"
+                                                    title="{% photo_credit i i.scientific_name %}">
+                                                    <img src="{{ i.thumb_large }}"
+                                                        alt="{% photo_credit i i.scientific_name %}">
+                                                </a>
+                                                {% endwith %}
+                                            {% endwith %}
+                                        {% endfor %}
+                                    {% endif %}
                                 </div>
                             </div>
                             <div class="controls">
@@ -59,9 +76,27 @@
                             </div>
                         </div>
                         <div class="details">
-                            <h3>{{ pile.friendly_title|lower|capfirst }} <span>{{ pile.friendly_name|capfirst }}</span></h3>
+                            {# Mockup for Issue #254 #}
+                            {% if key == 'full' and forloop.counter > 1 %}
+                                {% if forloop.counter == 2 %}
+                                    <h3>Alternate-leaved other herbaceous, flowering dicots <span></span></h3>
+                                {% else %}
+                                    <h3>Non-alternate-leaved other herbaceous, flowering dicots <span></span></h3>
+                                {% endif %}
+                            {% else %}
+                                <h3>{{ pile.friendly_title|lower|capfirst }} <span>{{ pile.friendly_name|capfirst }}</span></h3>
+                            {% endif %}
+
                             <p class="key-char">
                                 <span class="section-title">Key Characteristics</span>
+                                {# Mockup for Issue #254 #}
+                                {% if key == 'full' and forloop.counter > 1 %}
+                                    {% if forloop.counter == 2 %}
+                                        Alternate leaves.
+                                    {% else %}
+                                        Opposite, basal, whorled, or no leaves.
+                                    {% endif %}
+                                {% endif %}
                                 {{ pile.key_characteristics|removetags:"div ul li"|safe }}
                             </p>
                             <p class="exceptions">
