--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -1,25 +1,22 @@
 {% load facebook_connect %}
+{% load gobotany_tags %}
 <div class="box">
     <div class="section">
-        {% url ps-main as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>PlantShare</a></h4>
+        <h4>{% nav_item 'PlantShare' ps-main %}</h4>
     </div>
     {% if user.is_authenticated %}
     <div class="section">
-        {% url ps-new-sighting as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Post a Sighting</a></h4>
+        <h4>{% nav_item 'Post a Sighting' ps-new-sighting %}</h4>
     </div>
     <div class="section">
-        {% url ps-profile as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>My Profile</a></h4>
+        <h4>{% nav_item 'My Profile' ps-profile %}</h4>
     </div>
     <div class="section">
-        <h4><a href="{% url auth_logout %}">Log Out</a></h4>
+        <h4>{% nav_item 'Log Out' auth_logout %}</h4>
     </div>
     {% else %}
     <div class="section">
-        {% url registration_register as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Sign Up for PlantShare</a></h4>
+        <h4>{% nav_item 'Sign Up for PlantShare' registration_register %}</h4>
     </div>
     {% endif %}
 </div>
