--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -25,7 +25,7 @@
     {% include "simplekey/_header.html" %}
 
     <div class="content">
-        {% if key != 'simple' %}
+        {% if key == 'full' %}
             <div class="note">This is a species in our Full Key.
             Complete data are coming soon.</div>
         {% endif %}
@@ -33,8 +33,6 @@
         <div class="container">
             <div id="main">
 
-                {# TODO: After implementing Full Key and navigation, #}
-                {# show appropriate breadcrumb links.                #}
                 {% if key == 'dichotomous' %}
                     <div id="breadcrumb">
                         <p class="nogloss">
