Change text on dkey buttons to same page #247
A button leading to lead 3 used to say "3" and have a down-arrow.
Now, they say "CHOOSE THIS LEAD" instead, per the visual design.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -96,7 +96,7 @@
           <a class="button"
           {% spaceless %}
           {% if lead.nextnum %}
-            href="#c{{ lead.nextnum }}">{{ lead.nextnum }} ↴
+            href="#c{{ lead.nextnum }}">CHOOSE THIS LEAD
           {% elif lead.goto_num %}
             href="#c{{ lead.goto_num }}">JUMP TO {{ lead.goto_num }}
           {% elif p.rank == 'species' %}
